# cpp_maya_template

./: .gitignore  CMakeLists.txt  README.md  build_windows.bat
src/: pluginMain.cpp
